# netqir-grammar

./: CMakeLists.txt
antlr/: NetQIR.g4  NetQIR.interp  NetQIR.tokens  NetQIRLexer.interp
examples/: qsend_qrecv.ll
